Mitglieder Sektion next steps

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/mitglieder-styles.css">
     <link rel="stylesheet" href="/css/reisen-styles.css">
-    <link rel="stylesheet" href="/css/flipcard-styles.css">
 
 <body>
     <header>
@@ -32,13 +31,13 @@
                             <a class="nav-link " href="#section-Verein">Verein</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-link-1" href="#section-Mitglieder">Mitglieder</a>
+                            <a class="nav-link" href="#section-Mitglieder">Mitglieder</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-link-2" href="#">Historie</a>
+                            <a class="nav-link" href="#">Historie</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link nav-link-2" href="#section-Reisen">Reisen</a>
+                        <li class="nav-item nav-item-right">
+                            <a class="nav-link " href="#section-Reisen">Reisen</a>
                         </li>
                         <!-- <li class="nav-item dropdown nav-item-right">
                             <a class="nav-link dropdown-toggle" href="#section-Reisen" data-bs-toggle="dropdown"
