--- a/public/css/mitglieder-styles.css
+++ b/public/css/mitglieder-styles.css
@@ -3,14 +3,27 @@
     --width: 28vw;
 }
 
+.mitglieder-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+}
+#section-Mitglieder .vereinsname {
+    margin: 0rem; 
+	margin-top: 2rem;
+	z-index: 2;
+    position: static !important;
+    width: 100%;
+    text-align: center;
+}
 .carousel__list {
-    position: relative;
     display: flex;
     overflow: hidden;
     list-style: none;
-    padding: 4rem 0 3rem;
+    padding: 2rem;
     margin: 0;
     contain: layout;
+    flex: 1;
 }
 
 .carousel__item {
@@ -321,7 +334,7 @@
     -moz-backface-visibility: hidden;
     transform-style: preserve-3d;
     transform: translateZ(10px);
-    transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1.0);
 }
 
 .card:after {
@@ -333,7 +346,7 @@
     border-radius: 5px;
     box-shadow: 0 14px 50px -4px rgba(0, 0, 0, 0.15);
     opacity: 0;
-    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1.4);
+    transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1.4);
 }
 
 .card:hover {
@@ -395,7 +408,33 @@
     rgb(15, 98, 146) 50%); */
     background-clip: text;
     -webkit-background-clip: text;
-    margin: 0rem 1rem;
+    margin: 0rem 1rem 1rem 1rem;
+}
+
+.button {
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 600;
+    cursor: pointer;
+    height: 3rem;
+    line-height: 2.9rem;
+    width: 150px;
+    background-color: transparent;
+    border: solid 2px #fff;
+    color: #fff;
+    border-radius: 4px;
+    text-align: center;
+    margin: 1rem auto;
+    backface-visibility: hidden;
+    transition: 0.3s ease-in-out;
+    text-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.button:hover {
+    background-color: #fff;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
+    text-shadow: none;
+    color: rgb(15, 98, 146);
 }
 
 /* Do I need this? */
