--- a/views/partials/members.ejs
+++ b/views/partials/members.ejs
@@ -6,12 +6,20 @@
         <div>
             <ul class="carousel__list">
                 <li class="carousel__item" tabindex="0">
+                    <div class="carousel__box">
+                        <img src="images/Lenz.jpg" width="480" height="720">
+                        <div class="carousel__contents">
+                            <h2 class="mitglieder__name">LDB</h2>
+                            <h3 class="mitglieder__titel">Kassenwart und Skatelegende</h3>
+                        </div>
+                    </div>
+                </li>
+                <li class="carousel__item" tabindex="0">
                     <div class="cardContainer inactive">
                         <div class="card">
-                            <div class="side front">
+                            <div class="side front ">
                                 <div class="carousel__box">
-                                    <div class="carousel__image"><img src="images/Lenz.jpg" width="480" height="720">
-                                    </div>
+                                    <img src="images/Lenz.jpg" width="480" height="720">
                                     <div class="carousel__contents">
                                         <h2 class="mitglieder__name">Lorenz Schiegerl</h2>
                                         <h3 class="mitglieder__titel">Kassenwart und Skatelegende</h3>
@@ -40,8 +48,7 @@
                         <div class="card">
                             <div class="side front">
                                 <div class="carousel__box">
-                                    <div class="carousel__image"><img src="images/Sevi.jpg" width="480" height="720">
-                                    </div>
+                                    <img src="images/Sevi.jpg" width="480" height="720">
                                     <div class="carousel__contents">
                                         <h2 class="mitglieder__name">Severin Merget</h2>
                                         <h3 class="mitglieder__titel">Minister für Sport und Coolness</h3>
