--- a/views/partials/members.ejs
+++ b/views/partials/members.ejs
@@ -1,10 +1,11 @@
-    <img src="images/logo-bw.png" class="demo-bg">
+    <img src="images/logo-bw.png" class="mitglieder-bg">
     <div class="mitglieder-wrapper">
         <div>
             <h1 class="vereinsname">Unsere Mitglieder</h1>
         </div>
         <div>
             <ul class="carousel__list">
+                <!-- There is still some glitching here. Needs to be addressed. -->
                 <li class="carousel__item" tabindex="0">
                     <div class="carousel__box">
                         <img src="images/Lenz.jpg" width="480" height="720">
@@ -14,7 +15,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="carousel__item" tabindex="0">
+                <!-- <li class="carousel__item" tabindex="0">
                     <div class="cardContainer inactive">
                         <div class="card">
                             <div class="side front ">
@@ -42,7 +43,7 @@
                             </div>
                         </div>
                     </div>
-                </li>
+                </li> -->
                 <li class="carousel__item" tabindex="0">
                     <div class="cardContainer inactive">
                         <div class="card">
