--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,30 +1,13 @@
 <%- include("partials/header") %>
 
-
 <div class="hero">
-    <h1 class="vereinsname">Boyz<br> n-the <br> Hood</h1>
+    <h1 data-aos="zoom-out" data-aos-delay="300" class="aos-init aos-animate vereinsname">Boyz<br> n-the <br> Hood</h1>
 </div>
-<!-- 
 <section id="section-Verein">
-    <div class="grid-container-Verein">
-        <div class="Vereinsmotto">
-            <h1 data-aos="zoom-out" data-aos-delay="100" class="aos-init aos-animate logo">
-                Freunde<br> für's<br> Leben
-            </h1>
-        </div>
-        <div class="Vereinsinfo">
-            <p data-aos="zoom-out" data-aos-delay="300" class="aos-init aos-animate logo">
-                Satzung
-            </p>
-            <p data-aos="zoom-out" data-aos-delay="400" class="aos-init aos-animate logo">
-                Historie
-            </p>
-        </div>
-        <div class="logo-background">
-        </div>
-    </div>
-</section> -->
 
+    <%- include("partials/verein") %>
+
+</section>
 
 <section id="section-Mitglieder">
 
