--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,9 @@
 
 <div class="hero">
     <h1 data-aos="zoom-out" data-aos-delay="300" class="aos-init aos-animate vereinsname">Boyz<br> n-the <br> Hood</h1>
+    <!-- <div class="logo-container">
+        <img src="images/logo-bw.png" height="auto" width="50%">
+    </div> -->
 </div>
 <section id="section-Verein">
 
