--- a/views/partials/verein.ejs
+++ b/views/partials/verein.ejs
@@ -1,17 +1,13 @@
-<div class="grid-container-Verein">
-    <div class="Vereinsmotto">
-        <h1 data-aos="zoom-out" data-aos-delay="100" class="aos-init aos-animate ">
-            Freunde<br> für's<br> Leben
-        </h1>
+<div class="verein-wrapper">
+    <div class="verein-content">
+        <h1 data-aos="zoom-out" data-aos-delay="100" class="aos-init aos-animate vereinsname">
+            Boyz-n-the-Hood</h1>
+        <h2>Freunde für's Leben</h2>
+        <h4>Gegründet 28.2.2017</h4>
+        <p> <span class="bold">§1</span><br>
+            Dieser Verein dient dem Zweck der Erhaltung der Freundschaft, Freiheit und Brüderlichkeit sowie dem Gelingen
+            einer jährlichen Unternehmung der Mitglieder. </p>
+
     </div>
-    <div class="Vereinsinfo">
-        <p data-aos="zoom-out" data-aos-delay="300" class="aos-init aos-animate ">
-            Satzung
-        </p>
-        <p data-aos="zoom-out" data-aos-delay="400" class="aos-init aos-animate ">
-            Historie
-        </p>
-    </div>
-    <div class="logo-background">
-    </div>
+
 </div>
