--- a/public/css/mitglieder-styles.css
+++ b/public/css/mitglieder-styles.css
@@ -11,7 +11,7 @@
 
 #section-Mitglieder .vereinsname {
     margin: 0rem;
-    margin-top: 2rem;
+    padding-top: 4rem;
     padding-bottom: 0;
     z-index: 2;
     position: static !important;
