--- a/public/css/verein-styles.css
+++ b/public/css/verein-styles.css
@@ -1,31 +1,51 @@
 #section-Verein p {
 	color: #0F6292;
-	font-size: calc(1rem + 1vw);
-	padding-left: 30px;
+	font-size: calc(0.5rem + 0.8vw);
+	padding: 0px 30px;
+	text-align: center;
+	max-width: calc(200px + 10vw + 10vh);
+	margin-bottom: 4rem;
 }
 
-.grid-container-Verein {
+#section-Verein h1 {}
+
+.verein-content {
+	margin-top: 2rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	height: auto;
+	/* min-height: 500px; */
+	justify-content: space-evenly;
+}
+
+.verein-content .vereinsname {
+	position: static;
+	margin: 0rem;
+	margin-top: 2rem;
+	padding: 1rem 0rem;
+}
+.verein-wrapper {
 	display: grid;
 	grid-template-rows: 100vh;
-	grid-template-columns: 3fr 2fr calc(200px + 30vw);
+	grid-template-columns: 2fr 1fr;
 	overflow: hidden;
+	position: relative;
+	background-color: rgba(255, 255, 0, 0.1);
 }
-
-.Vereinsmotto {
-	display: flex;
-	align-items: center;
-}
-
-.Vereinsmotto h1 {
-	text-align: left;
-	margin-left: 50px;
-	margin-bottom: 100px;
-	padding-right: 20px;
-	font-weight: 700;
-	color: #0F6292;
-	font-size: calc(2.5rem + 3vw);
-	line-height: calc(4rem + 3vw);
-	letter-spacing: (0.15rem + 3vw);
+.verein-wrapper::before {
+	content: ' ';
+	display: block;
+	position: absolute;
+	left: 60%;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	opacity: 0.3;
+	background-image: url('/images/logo-bw.png');
+	background-repeat: no-repeat;
+	background-position: 50% 0;
+	background-size: cover;
 }
 
 .Vereinsinfo {
@@ -47,6 +67,5 @@
 	background-repeat: no-repeat;
 	background-position: 150px 0px;
 	opacity: 0.3;
-    z-index: 100;
+	z-index: 100;
 }
-
