--- a/views/partials/verein.ejs
+++ b/views/partials/verein.ejs
@@ -7,7 +7,18 @@
         <p> <span class="bold">§1</span><br>
             Dieser Verein dient dem Zweck der Erhaltung der Freundschaft, Freiheit und Brüderlichkeit sowie dem Gelingen
             einer jährlichen Unternehmung der Mitglieder. </p>
-
+        <div class="buttons-wrapper">
+            <a href="/mitglieder/Lorenz">
+                <div class="button">
+                    Gründung
+                </div>
+            </a>
+            <a href="/mitglieder/Lorenz">
+                <div class="button">
+                    Satzung 
+                </div>
+            </a>
+        </div>
     </div>
 
 </div>
