--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,60 @@
+<footer class="flex-rw">
+
+  <ul class="footer-list-top">
+    <li>
+      <h4 class="footer-list-header">BntH</h4>
+    </li>
+    <li><a href="" itemprop="significantLink" class="generic-anchor footer-list-anchor">Gründung</a></li>
+
+    <li><a href="" class="generic-anchor footer-list-anchor" itemprop="significantLink">Satzung</a></li>
+  </ul>
+  <ul class="footer-list-top">
+    <li>
+      <h4 class="footer-list-header">Mitglieder</h4>
+    </li>
+    <li><a href="" class="generic-anchor footer-list-anchor">Manuel Rondelli</a></li>
+    <li><a href="" class="generic-anchor footer-list-anchor">Severin Merget</a></li>
+    <li><a href="" class="generic-anchor footer-list-anchor">Jakob Timmermann</a></li>
+    <li><a href="" class="generic-anchor footer-list-anchor">Lorenz Schiegerl</a></li>
+    <li><a href="" class="generic-anchor footer-list-anchor">Sebastian Ghanbari</a></li>
+  </ul>
+  <ul class="footer-list-top">
+    <li id="help">
+      <h4 class="footer-list-header">Reisen</h4>
+    </li>
+    <li><a href="" class="generic-anchor footer-list-anchor" itemprop="significantLink">Nizza 2017</a></li>
+    <li><a href="" class="generic-anchor footer-list-anchor" itemprop="significantLink">Dublin 2018</a></li>
+    <li><a href="" class="generic-anchor footer-list-anchor" itemprop="significantLink">Albanien 2019</a></li>
+    <li><a href="" class="generic-anchor footer-list-anchor" itemprop="significantLink">Schweiz/Italien 2020</a></li>
+    <li><a href="" itemprop="significantLink" class="generic-anchor footer-list-anchor">Kroatien 2021</a></li>
+    <li><a href="" itemprop="significantLink" class="generic-anchor footer-list-anchor">Kitzbühl 2022</a></li>
+  </ul>
+  <section class="footer-social-section flex-rw">
+    <span class="footer-social-overlap footer-social-connect">
+      MEHR <span class="footer-social-small">von</span> UNS
+    </span>
+    <span class="footer-social-overlap footer-social-icons-wrapper">
+      <a class="text-light social-media-symbol" href="#">
+        <svg xmlns="http://www.w3.org/2000/svg" height="1.5rem" viewBox="0 0 24 24" fill="white">
+          <path
+            d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+        </svg>
+        <a>
+    </span>
+  </section>
+  <section class="footer-bottom-section flex-rw">
+    <div class="footer-bottom-wrapper">
+      <p>
+        </span><svg xmlns="http://www.w3.org/2000/svg" height="1rem" viewBox="0 0 512 512" fill="white">
+          <path
+            d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM199.4 312.6c-31.2-31.2-31.2-81.9 0-113.1s81.9-31.2 113.1 0c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9c-50-50-131-50-181 0s-50 131 0 181s131 50 181 0c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0c-31.2 31.2-81.9 31.2-113.1 0z" />
+        </svg>
+        Jakob Timmermann 2023
+      </p>
+    </div>
+  </section>
+</footer>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
   integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous">
