--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,6 +12,7 @@
 
     <!-- aos library https://michalsnik.github.io/aos/ -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/footer-styles.css">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/mitglieder-styles.css">
     <link rel="stylesheet" href="/css/reisen-styles.css">
