--- a/public/css/footer-styles.css
+++ b/public/css/footer-styles.css
@@ -8,6 +8,7 @@
 
  .generic-anchor:hover {
      color: rgb(241, 223, 21);
+     padding-left: 5px;
  }
 
  .flex-rw {
@@ -94,13 +95,13 @@
      width: 100%;
      padding: 10px;
      border-top: 1px solid #ccc;
-     margin-top: 20px;
-     margin-left: 10px;
+     margin: 20px;
+     justify-content: center;
  }
 
- .footer-bottom-section>div:first-child {
+ /* .footer-bottom-section>div:first-child {
      margin-right: auto;
- }
+ } */
 
  .footer-bottom-wrapper p {
      font-size: 1rem;
@@ -120,13 +121,17 @@
      fill: rgb(255, 237, 0);
  }
 
+ .social-media-symbol:hover svg {
+     height: 2.8rem;
+ }
+
  @media only screen and (max-width: 768px) {
      .footer-list-header {
          font-size: 2em;
      }
 
      .footer-list-anchor {
-         font-size: 1.1em;
+         font-size: 1.1rem;
      }
 
      .footer-social-connect {
@@ -150,9 +155,12 @@
      .footer-list-top {
          width: 100%;
      }
-    .footer-list-top li {
-     text-align: center;
-    }
+
+     .footer-list-top>li {
+         text-align: center;
+         margin-left: 0;
+     }
+
      .footer-list-header {
          font-size: 3em;
      }
