--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,10 +36,10 @@
                             <a class="nav-link" href="#section-Mitglieder">Mitglieder</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Historie</a>
+                            <a class="nav-link " href="#section-Reisen">Reisen</a>
                         </li>
                         <li class="nav-item nav-item-right">
-                            <a class="nav-link " href="#section-Reisen">Reisen</a>
+                            <a class="nav-link" href="#">Login</a>
                         </li>
                         <!-- <li class="nav-item dropdown nav-item-right">
                             <a class="nav-link dropdown-toggle" href="#section-Reisen" data-bs-toggle="dropdown"
