--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,122 +19,7 @@
 </section>
 
 <section id="section-Reisen">
-    <div class="push-right">
-        <h1 class="vereinsname push-right">Boyz<br> n-the <br> Hood</h1>
-
-    </div>
-    <div class="container-Reisen">
-        <div class="c-mouse-vertical-carousel js-carousel u-media-wrapper u-media-wrapper--16-9">
-            <ul class="c-mouse-vertical-carousel__list js-carousel-list">
-                <li class="c-mouse-vertical-carousel__list-item js-carousel-list-item" data-item-id="0"
-                    style="visibility: inherit; opacity: 1;">
-                    <a href="">
-                        <p class="c-mouse-vertical-carousel__eyebrow u-b4">
-                            <span>
-                                2017
-                            </span> Frankreich
-                        </p>
-
-                        <p class="c-mouse-vertical-carousel__title u-a5">
-                            Nizza
-                        </p>
-                    </a>
-                </li>
-
-                <li class="c-mouse-vertical-carousel__list-item js-carousel-list-item" data-item-id="1"
-                    style="visibility: inherit; opacity: 0.5; transform: matrix(1, 0, 0, 1, 5, 0);">
-                    <a href="">
-                        <p class="c-mouse-vertical-carousel__eyebrow u-b4">
-                            <span>
-                                2018
-                            </span> Irland
-                        </p>
-
-                        <p class="c-mouse-vertical-carousel__title u-a5">
-                            Dublin <br>
-                            <span class="c-span-small"> und Gallwick</span>
-                        </p>
-                    </a>
-                </li>
-
-                <li class="c-mouse-vertical-carousel__list-item js-carousel-list-item" data-item-id="2"
-                    style="visibility: inherit; opacity: 0.25; transform: matrix(1, 0, 0, 1, 10, 0);">
-                    <a href="">
-                        <p class="c-mouse-vertical-carousel__eyebrow u-b4">
-                            <span>
-                                2019
-                            </span> Albanien
-                        </p>
-
-                        <p class="c-mouse-vertical-carousel__title u-a5">
-                            Tirana <br>
-                            <span class="c-span-small">und mehr</span>
-                        </p>
-                    </a>
-                </li>
-
-                <li class="c-mouse-vertical-carousel__list-item js-carousel-list-item" data-item-id="3"
-                    style="visibility: inherit; opacity: 0; transform: matrix(1, 0, 0, 1, 10, 0);">
-                    <a href="">
-                        <p class="c-mouse-vertical-carousel__eyebrow u-b4">
-                            <span>
-                                2020
-                            </span> Schweiz/Italien
-                        </p>
-
-                        <p class="c-mouse-vertical-carousel__title u-a5">
-                            Tessin <br> <span class="c-span-small">und Alassio</span>
-                        </p>
-                    </a>
-                </li>
-
-                <li class="c-mouse-vertical-carousel__list-item js-carousel-list-item" data-item-id="4"
-                    style="visibility: inherit; opacity: 0; transform: matrix(1, 0, 0, 1, 10, 0);">
-                    <a href="">
-                        <p class="c-mouse-vertical-carousel__eyebrow u-b4">
-                            <span>
-                                2021
-                            </span> Kroatien
-                        </p>
-
-                        <p class="c-mouse-vertical-carousel__title u-a5">
-                            Split
-                        </p>
-                    </a>
-                </li>
-
-                <li class="c-mouse-vertical-carousel__list-item js-carousel-list-item" data-item-id="5"
-                    style="visibility: inherit; opacity: 0; transform: matrix(1, 0, 0, 1, 10, 0);">
-                    <a href="">
-                        <p class="c-mouse-vertical-carousel__eyebrow u-b4">
-                            <span>
-                                2022
-                            </span> Österreich
-                        </p>
-
-                        <p class="c-mouse-vertical-carousel__title u-a5">
-                            Kitzbühl
-                        </p>
-                    </a>
-                </li>
-
-            </ul>
-
-            <i id="img-nizza" class="c-mouse-vertical-carousel__bg-img js-carousel-bg-img"></i>
-            <i class="c-mouse-vertical-carousel__bg-img js-carousel-bg-img"
-                style='background-image: url("/images/Reisen/2018_Dublin/thumbnail.jpeg"); visibility: hidden; opacity: 0; transform: matrix(1.05, 0, 0, 1.05, 0, 0);'></i>
-            <i class="c-mouse-vertical-carousel__bg-img js-carousel-bg-img"
-                style='background-image: url("/images/Reisen/2019_Albanien/thumbnail.jpg"); visibility: hidden; opacity: 0; transform: matrix(1.05, 0, 0, 1.05, 0, 0);'></i>
-            <i class="c-mouse-vertical-carousel__bg-img js-carousel-bg-img"
-                style='background-image: url("/images/Reisen/2020_Schweiz/thumbnail.jpg"); visibility: hidden; opacity: 0; transform: matrix(1.05, 0, 0, 1.05, 0, 0);'></i>
-            <i class="c-mouse-vertical-carousel__bg-img js-carousel-bg-img"
-                style='background-image: url("/images/Reisen/2021_Kroatien/thumbnail.jpg"); visibility: hidden; opacity: 0; transform: matrix(1.05, 0, 0, 1.05, 0, 0);'></i>
-            <i class="c-mouse-vertical-carousel__bg-img js-carousel-bg-img"
-                style='background-image: url("/images/Reisen/2022_Österreich/thumbnail.jpg"); visibility: hidden; opacity: 0; transform: matrix(1.05, 0, 0, 1.05, 0, 0);'></i>
-            <i class="c-gradient-overlay"></i>
-        </div>
-    </div>
-
+    <%- include("partials/reisen") %>
 </section>
 
 <%- include("partials/footer") %>
