--- a/views/partials/reisen.ejs
+++ b/views/partials/reisen.ejs
@@ -1,5 +1,5 @@
 <div class="push-right">
-    <h1 class="vereinsname push-right">Boyz<br> n-the <br> Hood</h1>
+    <h1 class="vereinsname push-right">Unsere<br> Reisen</h1>
 
 </div>
 <div class="container-Reisen">
@@ -100,16 +100,11 @@
         </ul>
 
         <i id="img-nizza" class="c-mouse-vertical-carousel__bg-img js-carousel-bg-img"></i>
-        <i class="c-mouse-vertical-carousel__bg-img js-carousel-bg-img"
-            style='background-image: url("/images/Reisen/2018_Dublin/thumbnail.jpeg"); visibility: hidden; opacity: 0; transform: matrix(1.05, 0, 0, 1.05, 0, 0);'></i>
-        <i class="c-mouse-vertical-carousel__bg-img js-carousel-bg-img"
-            style='background-image: url("/images/Reisen/2019_Albanien/thumbnail.jpg"); visibility: hidden; opacity: 0; transform: matrix(1.05, 0, 0, 1.05, 0, 0);'></i>
-        <i class="c-mouse-vertical-carousel__bg-img js-carousel-bg-img"
-            style='background-image: url("/images/Reisen/2020_Schweiz/thumbnail.jpg"); visibility: hidden; opacity: 0; transform: matrix(1.05, 0, 0, 1.05, 0, 0);'></i>
-        <i class="c-mouse-vertical-carousel__bg-img js-carousel-bg-img"
-            style='background-image: url("/images/Reisen/2021_Kroatien/thumbnail.jpg"); visibility: hidden; opacity: 0; transform: matrix(1.05, 0, 0, 1.05, 0, 0);'></i>
-        <i class="c-mouse-vertical-carousel__bg-img js-carousel-bg-img"
-            style='background-image: url("/images/Reisen/2022_Österreich/thumbnail.jpg"); visibility: hidden; opacity: 0; transform: matrix(1.05, 0, 0, 1.05, 0, 0);'></i>
+        <i id="img-dublin" class="c-mouse-vertical-carousel__bg-img js-carousel-bg-img"></i>
+        <i id="img-tirana" class="c-mouse-vertical-carousel__bg-img js-carousel-bg-img"></i>
+        <i id="img-tessin" class="c-mouse-vertical-carousel__bg-img js-carousel-bg-img"></i>
+        <i id="img-split" class="c-mouse-vertical-carousel__bg-img js-carousel-bg-img"></i>
+        <i id="img-kitzbuehl" class="c-mouse-vertical-carousel__bg-img js-carousel-bg-img"></i>
         <i class="c-gradient-overlay"></i>
     </div>
 </div>
