--- a/public/css/footer-styles.css
+++ b/public/css/footer-styles.css
@@ -60,9 +60,9 @@
      position: absolute;
      z-index: 1;
      top: 50%;
-     left: 10px;
+     left: 20px;
      border-top: 1px solid #ccc;
-     width: calc(100% - 20px);
+     width: calc(100% - 40px);
  }
 
  .footer-social-overlap {
@@ -76,8 +76,15 @@
      display: flex;
      align-items: center;
      font: 3.5em "Oswald", sans-serif;
+     font-size: 3.5rem;
      color: #fff;
  }
+
+.footer-social-connect:hover {
+     color: rgb(241, 223, 21);
+     text-shadow: 4px 4px 6px rgba(20, 50, 67, 0.887);
+     transform: scale(1.01);
+}
 
  .footer-social-small {
      font-size: 0.6em;
@@ -88,15 +95,15 @@
      font-size: 3em;
  }
 
- .footer-social-overlap>a:not(:first-child) {
+ /* .footer-social-overlap>a:not(:first-child) {
      margin-left: 0.2rem;
- }
+ } */
 
  .footer-bottom-section {
      width: 100%;
      padding: 10px;
      border-top: 1px solid #ccc;
-     margin: 20px;
+     margin: 20px; 
      justify-content: center;
  }
 
@@ -115,6 +122,11 @@
      font-style: normal;
  }
 
+ .social-media-symbol svg {
+     height: 2.5rem;
+     margin: 0vw 0.5vw;
+ }
+
  .social-media-symbol svg path {
      fill: #fff;
  }
@@ -125,7 +137,7 @@
 
  .social-media-symbol:hover svg {
      filter: drop-shadow(3px 5px 2px rgba(20, 50, 67, 0.887));
-     height: 2.8rem;
+     transform: scale(1.1);
  }
 
  @media only screen and (max-width: 768px) {
